--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/summarizer.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/summarizer.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>Text Summarizer</title>
   </head>
   <body>
     <div id="root"></div>
